feat: adds lambda example
